--- a/src/view/fxml/MainPage.fxml
+++ b/src/view/fxml/MainPage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.fxml.Controller">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.fxml.MainPageController">
     <children>
         <TabPane fx:id="tabPane" layoutY="24.0" prefHeight="576.0" prefWidth="900.0" tabClosingPolicy="ALL_TABS">
             <tabs>
@@ -28,8 +28,8 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem mnemonicParsing="false" onAction="#addNewTab" text="New Tab" />
-                  <MenuItem mnemonicParsing="false" text="Open FIle" />
+                  <MenuItem fx:id="newTabMenuItem" mnemonicParsing="false" onAction="#addNewTab" text="New Tab" />
+                  <MenuItem mnemonicParsing="false" onAction="#chooseFile" text="Open FIle" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" text="Print" />
                   <MenuItem mnemonicParsing="false" text="Print Preview" />
