--- a/src/view/fxml/MainPage.fxml
+++ b/src/view/fxml/MainPage.fxml
@@ -7,7 +7,12 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.fxml.MainPageController">
     <children>
@@ -17,7 +22,29 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="900.0">
                             <children>
-                                  <Button layoutX="742.0" layoutY="214.0" mnemonicParsing="false" prefHeight="119.0" prefWidth="132.0" text="Run" textAlignment="CENTER" />
+                                  <Button layoutX="615.0" layoutY="273.0" mnemonicParsing="false" onAction="#addNewTab" prefHeight="42.0" prefWidth="106.0" text="Draw Graph" textAlignment="CENTER" />
+                        <TextArea fx:id="errorTextArea" layoutX="450.0" layoutY="331.0" prefHeight="200.0" prefWidth="436.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextArea>
+                        <TextArea fx:id="fileTextArea" layoutX="14.0" layoutY="14.0" prefHeight="517.0" prefWidth="423.0" />
+                        <GridPane gridLinesVisible="true" layoutX="450.0" layoutY="14.0" prefHeight="247.0" prefWidth="436.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                        <Button fx:id="simulate" layoutX="450.0" layoutY="275.0" mnemonicParsing="false" onAction="#simulate" prefHeight="42.0" prefWidth="115.0" text="Simulate">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
                             </children>
                         </AnchorPane>
                     </content>
@@ -29,7 +56,7 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
                   <MenuItem fx:id="newTabMenuItem" mnemonicParsing="false" onAction="#addNewTab" text="New Tab" />
-                  <MenuItem mnemonicParsing="false" onAction="#chooseFile" text="Open FIle" />
+                  <MenuItem mnemonicParsing="false" onAction="#chooseFile" text="Open File" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" text="Print" />
                   <MenuItem mnemonicParsing="false" text="Print Preview" />
