--- a/src/view/fxml/HelpPage.fxml
+++ b/src/view/fxml/HelpPage.fxml
@@ -1,48 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.fxml.HelpPageController">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="89.0" prefWidth="164.0" text="Spice" textAlignment="CENTER" textFill="#db1212">
-         <font>
-            <Font name="Century" size="64.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="105.0" fitWidth="668.0" layoutX="191.0" layoutY="14.0" pickOnBounds="true">
-         <image>
-            <Image url="@../img/Signal1.png" />
-         </image>
-      </ImageView>
-      <VBox layoutX="13.0" layoutY="136.0" prefHeight="351.0" prefWidth="875.0">
+      <VBox prefHeight="600.0" prefWidth="900.0">
          <children>
+            <HBox prefHeight="130.0" prefWidth="900.0" spacing="25.0">
+               <children>
+                  <Label prefHeight="89.0" prefWidth="164.0" text="Spice" textAlignment="CENTER" textFill="#db1212">
+                     <font>
+                        <Font name="Century" size="64.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="105.0" fitWidth="668.0" pickOnBounds="true">
+                     <image>
+                        <Image url="@../img/Signal1.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <padding>
+                  <Insets left="20.0" top="15.0" />
+               </padding>
+            </HBox>
             <Accordion>
               <panes>
                 <TitledPane animated="false" text="untitled 1">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TextArea fx:id="firstTextArea" editable="false" prefWidth="875.0" />
+                           </children>
+                    </AnchorPane>
                   </content>
                 </TitledPane>
                 <TitledPane animated="false" text="untitled 2">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TextArea fx:id="secondTextArea" editable="false" prefWidth="875.0" />
+                           </children></AnchorPane>
                   </content>
                 </TitledPane>
                 <TitledPane animated="false" text="untitled 3">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TextArea fx:id="thirdTextArea" editable="false" prefWidth="875.0" />
+                           </children></AnchorPane>
                   </content>
                 </TitledPane>
               </panes>
             </Accordion>
          </children>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
       </VBox>
    </children>
 </AnchorPane>
