--- a/src/view/fxml/MainPage.fxml
+++ b/src/view/fxml/MainPage.fxml
@@ -53,7 +53,7 @@
                         </MenuItem>
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem disable="true" mnemonicParsing="false" text="Print" />
-                        <MenuItem disable="true" mnemonicParsing="false" text="Print Preview" />
+                        <MenuItem mnemonicParsing="false" onAction="#showPrintPreview" text="Print Preview" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem disable="true" mnemonicParsing="false" text="Setting">
                            <accelerator>
@@ -218,7 +218,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#addNewTab" prefHeight="40.0" prefWidth="43.0">
+                  <Button mnemonicParsing="false" onAction="#drawCircuit" prefHeight="40.0" prefWidth="43.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="33.0" pickOnBounds="true">
                            <image>
@@ -255,7 +255,7 @@
                      <children>
                         <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="320.0">
                            <children>
-                              <TextArea fx:id="fileTextArea" maxWidth="1.7976931348623157E308" minHeight="200.0" minWidth="150.0" prefHeight="485.0" prefWidth="320.0" promptText="File text erea">
+                              <TextArea fx:id="fileTextArea" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="200.0" minWidth="150.0" prefHeight="485.0" prefWidth="320.0" promptText="File text erea">
                                  <font>
                                     <Font size="13.0" />
                                  </font>
@@ -269,7 +269,24 @@
                            </children>
                         </VBox>
                         <Separator orientation="VERTICAL" prefHeight="200.0" />
-                        <Pane fx:id="circuitPane" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+                        <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <center>
+                              <Pane fx:id="circuitPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                              </Pane>
+                           </center>
+                           <top>
+                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
+                           </top>
+                           <bottom>
+                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
+                           </bottom>
+                           <right>
+                              <Separator orientation="VERTICAL" prefHeight="200.0" BorderPane.alignment="CENTER" />
+                           </right>
+                        </BorderPane>
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
