--- a/src/view/fxml/mainPage.fxml
+++ b/src/view/fxml/mainPage.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -107,9 +106,9 @@
                   </Menu>
                </menus>
             </MenuBar>
-            <ToolBar prefHeight="40.0" prefWidth="1000.0">
+            <ToolBar prefHeight="40.0" prefWidth="1000.0" stylesheets="@mainPageCSS.css">
                <items>
-                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -136,7 +135,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true">
                            <image>
@@ -145,7 +144,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true">
                            <image>
@@ -154,7 +153,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -163,7 +162,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -181,7 +180,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -190,7 +189,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -199,7 +198,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -217,7 +216,16 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#drawCircuit" prefHeight="40.0" prefWidth="43.0">
+                  <Button mnemonicParsing="false" onAction="#drawCircuit" prefHeight="35.0" prefWidth="48.0">
+                     <graphic>
+                        <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true">
+                           <image>
+                              <Image url="@../img/stage-Icon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="43.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="33.0" pickOnBounds="true">
                            <image>
@@ -235,7 +243,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Label prefHeight="40.0" prefWidth="293.0" text=" Circuit Simulation" textFill="#b21b00">
+                  <Label prefHeight="40.0" prefWidth="293.0" text=" Circuit Simulation" textFill="#ff6a14">
                      <font>
                         <Font name="Century" size="32.0" />
                      </font>
@@ -246,42 +254,30 @@
       </VBox>
    </top>
    <center>
-      <TabPane fx:id="tabPane" prefHeight="525.0" prefWidth="1000.0" tabClosingPolicy="ALL_TABS" BorderPane.alignment="CENTER">
+      <TabPane fx:id="tabPane" prefHeight="525.0" prefWidth="1000.0" stylesheets="@mainPageCSS.css" tabClosingPolicy="ALL_TABS" BorderPane.alignment="CENTER">
          <tabs>
             <Tab closable="false" text="Start Page  ">
                <content>
-                  <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="485.0" prefWidth="1000.0" spacing="5.0">
+                  <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="485.0" prefWidth="1000.0" spacing="10.0">
                      <children>
-                        <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="320.0">
+                        <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="320.0" spacing="5.0">
                            <children>
-                              <TextArea fx:id="fileTextArea" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="200.0" minWidth="150.0" prefHeight="485.0" prefWidth="320.0" promptText="File text erea">
+                              <TextArea fx:id="fileTextArea" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="200.0" minWidth="150.0" prefHeight="485.0" prefWidth="320.0" promptText="File text erea" styleClass="text-area" stylesheets="@mainPageCSS.css">
                                  <font>
                                     <Font size="13.0" />
                                  </font>
                               </TextArea>
-                              <Separator prefWidth="200.0" />
-                              <TextArea fx:id="errorTextArea" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="100.0" minWidth="150.0" prefHeight="185.0" prefWidth="320.0" promptText="outputs erea">
+                              <TextArea fx:id="errorTextArea" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="100.0" minWidth="150.0" prefHeight="185.0" prefWidth="320.0" promptText="outputs erea" styleClass="text-area">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </TextArea>
                            </children>
                         </VBox>
-                        <Separator orientation="VERTICAL" prefHeight="200.0" />
-                        <BorderPane fx:id="borderPane" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-                           <top>
-                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
-                           </top>
-                           <bottom>
-                              <Separator prefWidth="200.0" BorderPane.alignment="CENTER" />
-                           </bottom>
-                           <right>
-                              <Separator orientation="VERTICAL" prefHeight="200.0" BorderPane.alignment="CENTER" />
-                           </right>
-                        </BorderPane>
+                        <BorderPane fx:id="borderPane" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
                      </children>
                      <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </HBox>
                </content>
@@ -290,14 +286,14 @@
       </TabPane>
    </center>
    <bottom>
-      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="1000.0" BorderPane.alignment="CENTER_LEFT">
+      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="1000.0" stylesheets="@mainPageCSS.css" BorderPane.alignment="CENTER_LEFT">
          <items>
             <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT">
                <children>
                   <ProgressBar fx:id="progressBar" prefHeight="27.0" prefWidth="160.0" progress="0.0" visible="false" />
                </children>
             </HBox>
-            <Label fx:id="percentLabel" contentDisplay="CENTER" prefHeight="25.0" prefWidth="99.0" text="100%" visible="false">
+            <Label fx:id="percentLabel" contentDisplay="CENTER" prefHeight="25.0" prefWidth="99.0" text="100%" textFill="#d37f25" visible="false">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
                </font>
