--- a/src/view/fxml/mainPage.fxml
+++ b/src/view/fxml/mainPage.fxml
@@ -33,7 +33,12 @@
                               <KeyCodeCombination alt="UP" code="T" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator>
                         </MenuItem>
-                        <MenuItem mnemonicParsing="false" onAction="#chooseFile" text="Open File">
+                        <MenuItem mnemonicParsing="false" onAction="#newFile" text="New File">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="F" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#openFile" text="Open File">
                            <accelerator>
                               <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator>
@@ -50,10 +55,16 @@
                            </accelerator>
                         </MenuItem>
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem disable="true" mnemonicParsing="false" text="Print" />
-                        <MenuItem mnemonicParsing="false" onAction="#showPrintPreview" text="Print Preview" />
+                        <MenuItem mnemonicParsing="false" onAction="#print" text="Print">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="P" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator></MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#showPrintPreview" text="Print Preview">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="P" control="DOWN" meta="UP" shift="DOWN" shortcut="UP" />
+                           </accelerator></MenuItem>
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem disable="true" mnemonicParsing="false" text="Setting">
+                        <MenuItem mnemonicParsing="false" onAction="#setting" text="Setting">
                            <accelerator>
                               <KeyCodeCombination alt="DOWN" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator>
@@ -70,23 +81,23 @@
                            </accelerator>
                         </MenuItem>
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem disable="true" mnemonicParsing="false" text="Cut">
+                        <MenuItem disable="true" mnemonicParsing="false" onAction="#cut" text="Cut">
                            <accelerator>
                               <KeyCodeCombination alt="UP" code="X" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator>
                         </MenuItem>
-                        <MenuItem disable="true" mnemonicParsing="false" text="Copy">
+                        <MenuItem disable="true" mnemonicParsing="false" onAction="#copy" text="Copy">
                            <accelerator>
                               <KeyCodeCombination alt="UP" code="C" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator>
                         </MenuItem>
-                        <MenuItem disable="true" mnemonicParsing="false" text="Past">
+                        <MenuItem disable="true" mnemonicParsing="false" onAction="#paste" text="Past">
                            <accelerator>
                               <KeyCodeCombination alt="UP" code="V" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator>
                         </MenuItem>
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem disable="true" mnemonicParsing="false" text="Delete">
+                        <MenuItem mnemonicParsing="false" onAction="#delete" text="Delete">
                            <accelerator>
                               <KeyCodeCombination alt="UP" code="DELETE" control="UP" meta="UP" shift="ANY" shortcut="UP" />
                            </accelerator>
@@ -95,8 +106,8 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="View">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Zoom in" />
-                        <MenuItem mnemonicParsing="false" text="Zoom out" />
+                        <MenuItem mnemonicParsing="false" onAction="#zoomIn" text="Zoom in" />
+                        <MenuItem mnemonicParsing="false" onAction="#zoomOut" text="Zoom out" />
                      </items>
                   </Menu>
                   <Menu mnemonicParsing="false" text="Help">
@@ -108,7 +119,7 @@
             </MenuBar>
             <ToolBar prefHeight="40.0" prefWidth="1000.0" stylesheets="@mainPageCSS.css">
                <items>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" onAction="#newFile" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -117,7 +128,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#chooseFile" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" onAction="#openFile" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -135,7 +146,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" onAction="#print" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true">
                            <image>
@@ -144,7 +155,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button disable="true" mnemonicParsing="false" onAction="#cut" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true">
                            <image>
@@ -153,7 +164,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button disable="true" mnemonicParsing="false" onAction="#copy" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -162,7 +173,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button disable="true" mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -189,7 +200,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" onAction="#zoomIn" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -198,7 +209,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" onAction="#zoomOut" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -225,7 +236,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="43.0">
+                  <Button mnemonicParsing="false" onAction="#drawVCPGraphs" prefHeight="40.0" prefWidth="43.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="33.0" pickOnBounds="true">
                            <image>
@@ -286,12 +297,24 @@
       </TabPane>
    </center>
    <bottom>
-      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="1000.0" stylesheets="@mainPageCSS.css" BorderPane.alignment="CENTER_LEFT">
+      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="35.0" prefWidth="1000.0" stylesheets="@mainPageCSS.css" BorderPane.alignment="CENTER_LEFT">
          <items>
-            <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT">
+            <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0">
                <children>
                   <ProgressBar fx:id="progressBar" prefHeight="27.0" prefWidth="160.0" progress="0.0" visible="false" />
+                  <Button mnemonicParsing="false" onAction="#setting" prefHeight="25.0" prefWidth="25.0">
+                     <graphic>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true">
+                           <image>
+                              <Image url="@../img/setting-icon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
+               <padding>
+                  <Insets right="5.0" />
+               </padding>
             </HBox>
             <Label fx:id="percentLabel" contentDisplay="CENTER" prefHeight="25.0" prefWidth="99.0" text="100%" textFill="#d37f25" visible="false">
                <font>
