after conflict! 2 TODO : error handling phase 1 diode - graphic(draw circuit) help page - new stage for draw.

--- a/src/view/fxml/mainPage.fxml
+++ b/src/view/fxml/mainPage.fxml
@@ -227,7 +227,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#drawCircuit" prefHeight="35.0" prefWidth="48.0">
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="48.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true">
                            <image>
